# penfolioop

./: .gitignore  Example_Synthetic_Data.html  Example_Synthetic_Data.ipynb  Example_US_Asset_Classes.html  Example_US_Asset_Classes.ipynb  README.md  index.md  pyproject.toml  ruff.toml
.github/: gh-pages.yml
.github/workflows/: release.yml  test.yml
docs/: Example_US_Asset_Classes.ipynb  index.md
docs/penfolioop/: constraints.html  index.html  optimizers.html  portfolio.html
penfolioop/: __init__.py  constraints.html  constraints.py  index.html  optimizers.html  optimizers.py  portfolio.html  portfolio.py
resources/: benchmarks.csv
tests/: test_constraints.py  test_optimizers.py  test_portfolio.py
