[project]
name = "penfolioop"
version = "0.2.1"
description = "Portfolio Optimization for Pension Funds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "cvxpy","pydantic"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "penfolioop"
module-root = ""



[project.optional-dependencies]
dev = [
  "ruff==0.9.10",
  "pre-commit==4.1.0",
]
docs = [
    "pdoc3",
    "matplotlib",
    "plotly",
    "seaborn",
    "nbformat==5.4.0",
    "ipython", 
    "notebook", 
    "ipywidgets"
]
tests = [
    "pytest",
    "pytest-cov",
]

